# RAGuard

./: .env.example  .gitignore  Dockerfile  README.md  README1.md  claude.md  docker-compose.yml  pyproject.toml
backend/: _diag.py  claude.md  cleanup.py  debug_sqlite.py  test_imports.py  test_live.py
backend/app/: claude.md  config.py  main.py
backend/app/api/: claude.md  conflicts.py  documents.py  evaluation.py  governance.py  health.py  qa.py  resolutions.py  router.py  scans.py
backend/app/conflict/: __init__.py  aggregator.py  candidate_generator.py  claude.md  fact_checker.py  reranker.py  scanner.py
backend/app/database/: chroma_client.py  claude.md  schema.sql  sqlite.py  vector_store.py
backend/app/ingestion/: chunker.py  claude.md  embedder.py  parser.py  pipeline.py  restore_chunker.py  tokenizer.py
backend/app/models/: claude.md  common.py  conflict.py  document.py  qa.py  resolution.py
backend/app/observability/: claude.md  langfuse.py
backend/app/qa/: answer_generator.py  claude.md  conflict_guard.py  retriever.py  router.py
backend/app/resolution/: __init__.py  claude.md  generator.py  graph.py  repair.py  state.py
backend/data/: claude.md
backend/tests/: claude.md  conftest.py  test_e2e.py
data/: claude.md
docs/: conflict-detection-fixes.md
frontend/: claude.md  nginx.conf  package-lock.json  package.json
frontend/public/: claude.md
frontend/src/: App.tsx  claude.md  index.css
frontend/src/api/: claude.md  client.ts
frontend/src/assets/: claude.md
frontend/src/components/: claude.md
frontend/src/hooks/: claude.md  (+1 more)
(+21 files in other folders)
