[project]
name = "raguard"
version = "0.1.0"
description = "RAG Knowledge Base Conflict Detection & Auto-Repair Engine"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    "chromadb>=0.5",
    "openai>=1.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "pydantic-settings>=2.0",
    "langfuse>=2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0",
    "tiktoken>=0.7",
    "ragas>=0.3",
    "datasets>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
